--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1f48d3c9-6d95-4192-875a-0de19cc1848b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
